Use correct aligning method. Show logout option

--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -358,6 +358,22 @@ hr {
 
 #header a {
   color: white;
+  outline: 0;
+}
+
+#header a:visited { 
+  color: white;
+  text-decoration: none;
+}
+
+#header a:hover { 
+  color: white;
+  text-decoration: none;
+}
+
+#header a:active { 
+  color: white; 
+  text-decoration: none;
 }
 
 #header-image {
@@ -397,4 +413,10 @@ hr {
   float: left;
   margin-top: -3.5px; 
   margin-right: 5px; /* Leave a gap between picture and name */
+}
+
+
+#popover-login {
+  background: transparent;
+  border: none;
 }
